# pass

./: .gitignore  docker-compose.yml
docker/app/: .env  Dockerfile
docker/db/: .env  Dockerfile
docker/db/scripts/: create-test-db.sh
pass/: Cargo.toml
pass/migrations/2024-03-17-181159_create_passwords/: down.sql  up.sql
pass/src/: lib.rs  main.rs  models.rs  schema.rs
pass/src/repositories/: password.rs
